--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,7 @@
     	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("JSXTransformer.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("marked.js"))'></script>
         
-        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/reactTest.js")'></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/app.js")'></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </body>
 </html>
