Added Flat-UI theme

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,19 @@
 @(message: String)
 
 @main("Welcome to Play") {
-
-    <div id="content"></div>
+	
+	<div class="container">
+      <div class="demo-headline">
+        <h1 class="demo-logo">
+          <div class="logo"></div>
+          Employee Service
+          <small>Employee Service is the platform where employee can find their details.</small>
+        </h1>
+      </div>
+      
+      <div class="row demo-row">
+    	<div id="content"></div>
+    	</div>
+    </div>
 
 }
