Created dashboard page and its functionality

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,17 +3,13 @@
 @main("Welcome to Play") {
 	
 	<div class="container">
-      <div class="demo-headline">
-        <h1 class="demo-logo">
-          <div class="logo"></div>
-          Employee Service
-          <small>Employee Service is the platform where employee can find their details.</small>
-        </h1>
-      </div>
-      
-      <div class="row demo-row">
-    	<div id="content"></div>
-    	</div>
-    </div>
-
+    	<div class="demo-headline">
+        	<h1 class="demo-logo">
+          		<div class="logo"></div>
+          		Employee Service
+          		<small>Employee Service is the platform where employee can find their details.</small>
+          		<a href="@routes.Application.dashboard">Dashboard</a>
+        	</h1>
+      	</div>
+	</div>
 }
