--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,8 +24,9 @@
 	    <![endif]-->
     </head>
     <body>
-    
-        @content
+    	<div class="container">
+        	@content
+        </div>
         
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
