Added employee list and same call

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -30,7 +30,7 @@
         
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
-        <script type='text/javascript' src="@routes.Assets.versioned("lib/universal/javascripts/flat-ui.min.js")"></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/flat-ui.min.js")'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.fullPath("react", "react.js"))'></script>
     	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("JSXTransformer.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("marked.js"))'></script>
